y.output
Terminals which are not used

   ERRO
   FOR


State 53 conflicts: 4 shift/reduce
State 65 conflicts: 1 shift/reduce
State 68 conflicts: 9 shift/reduce
State 92 conflicts: 4 shift/reduce
State 93 conflicts: 4 shift/reduce
State 94 conflicts: 4 shift/reduce
State 108 conflicts: 3 shift/reduce
State 109 conflicts: 3 shift/reduce
State 110 conflicts: 3 shift/reduce
State 111 conflicts: 3 shift/reduce
State 112 conflicts: 3 shift/reduce
State 113 conflicts: 3 shift/reduce
State 120 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: declVariaveis atribuicao Corpo

    2 declVariaveis: VARS Declaracao ';'

    3 Declaracao: Declaracao ';' umaDeclaracao
    4           | umaDeclaracao

    5 umaDeclaracao: Type VarList

    6 Type: INT

    7 VarList: VarList ',' Elem
    8        | Elem

    9 Elem: id
   10     | id '[' num ']'
   11     | id '[' num ']' '[' num ']'

   12 atribuicao: ATRIBUICAO conjAtribuicoes ';'

   13 conjAtribuicoes: conjAtribuicoes ',' umaAtribuica
   14                | umaAtribuica

   15 umaAtribuica: id '=' num

   16 Corpo: INICIO Instrucoes FIM

   17 Instrucoes: Instrucoes Instrucao
   18           | Instrucao

   19 Instrucao: Ciclo
   20          | Condicional
   21          | Assignment
   22          | IO ';'

   23 Ciclo: ENQUANTO '(' Logico ')' '{' Instrucoes '}'

   24 Logico: Expressao DIF Expressao
   25       | Expressao IGUAL Expressao
   26       | Expressao MAIOROUIGUAL Expressao
   27       | Expressao MENOROUIGUAL Expressao
   28       | Expressao '<' Expressao
   29       | Expressao '>' Expressao
   30       | Expressao

   31 Condicional: SE '(' Logico ')' '{' Instrucoes '}'
   32            | OU '(' Logico ')' '{' Instrucoes '}'
   33            | SENAO '{' Instrucoes '}'

   34 Assignment: id '=' Expressao
   35           | id '[' Expressao ']' '=' Expressao
   36           | id '[' Expressao ']' '[' Expressao ']' '=' Expressao

   37 IO: Output
   38   | Input

   39 Output: IMPRIME Expressao
   40       | IMPRIME string

   41 Input: LER id
   42      | LER id '[' Expressao ']'
   43      | LER id '[' Expressao ']' '[' Expressao ']'

   44 Expressao: Expressao '+' Aritm
   45          | Expressao '-' Aritm
   46          | Expressao OU Aritm
   47          | Aritm

   48 Aritm: Aritm '*' Simples
   49      | Aritm '/' Simples
   50      | Aritm MOD Simples
   51      | Aritm E Simples
   52      | Simples

   53 Simples: id
   54        | id '[' Expressao ']'
   55        | id '[' Expressao ']' '[' Expressao ']'
   56        | num
   57        | '(' Logico ')'
   58        | NOT Logico


Terminals, with rules where they appear

$end (0) 0
'(' (40) 23 31 32 57
')' (41) 23 31 32 57
'*' (42) 48
'+' (43) 44
',' (44) 7 13
'-' (45) 45
'/' (47) 49
';' (59) 2 3 12 22
'<' (60) 28
'=' (61) 15 34 35 36
'>' (62) 29
'[' (91) 10 11 35 36 42 43 54 55
']' (93) 10 11 35 36 42 43 54 55
'{' (123) 23 31 32 33
'}' (125) 23 31 32 33
error (256)
ERRO (258)
id (259) 9 10 11 15 34 35 36 41 42 43 53 54 55
string (260) 40
num (261) 10 11 15 56
IMPRIME (262) 39 40
LER (263) 41 42 43
VARS (264) 2
INICIO (265) 16
FIM (266) 16
INT (267) 6
ATRIBUICAO (268) 12
SENAO (269) 33
ENQUANTO (270) 23
SE (271) 31
FOR (272)
DIF (273) 24
MOD (274) 50
MAIOROUIGUAL (275) 26
MENOROUIGUAL (276) 27
IGUAL (277) 25
E (278) 51
OU (279) 32 46
NOT (280) 58


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Programa (42)
    on left: 1, on right: 0
declVariaveis (43)
    on left: 2, on right: 1
Declaracao (44)
    on left: 3 4, on right: 2 3
umaDeclaracao (45)
    on left: 5, on right: 3 4
Type (46)
    on left: 6, on right: 5
VarList (47)
    on left: 7 8, on right: 5 7
Elem (48)
    on left: 9 10 11, on right: 7 8
atribuicao (49)
    on left: 12, on right: 1
conjAtribuicoes (50)
    on left: 13 14, on right: 12 13
umaAtribuica (51)
    on left: 15, on right: 13 14
Corpo (52)
    on left: 16, on right: 1
Instrucoes (53)
    on left: 17 18, on right: 16 17 23 31 32 33
Instrucao (54)
    on left: 19 20 21 22, on right: 17 18
Ciclo (55)
    on left: 23, on right: 19
Logico (56)
    on left: 24 25 26 27 28 29 30, on right: 23 31 32 57 58
Condicional (57)
    on left: 31 32 33, on right: 20
Assignment (58)
    on left: 34 35 36, on right: 21
IO (59)
    on left: 37 38, on right: 22
Output (60)
    on left: 39 40, on right: 37
Input (61)
    on left: 41 42 43, on right: 38
Expressao (62)
    on left: 44 45 46 47, on right: 24 25 26 27 28 29 30 34 35 36 39
    42 43 44 45 46 54 55
Aritm (63)
    on left: 48 49 50 51 52, on right: 44 45 46 47 48 49 50 51
Simples (64)
    on left: 53 54 55 56 57 58, on right: 48 49 50 51 52


state 0

    0 $accept: . Programa $end

    VARS  shift, and go to state 1

    Programa       go to state 2
    declVariaveis  go to state 3


state 1

    2 declVariaveis: VARS . Declaracao ';'

    INT  shift, and go to state 4

    Declaracao     go to state 5
    umaDeclaracao  go to state 6
    Type           go to state 7


state 2

    0 $accept: Programa . $end

    $end  shift, and go to state 8


state 3

    1 Programa: declVariaveis . atribuicao Corpo

    ATRIBUICAO  shift, and go to state 9

    atribuicao  go to state 10


state 4

    6 Type: INT .

    $default  reduce using rule 6 (Type)


state 5

    2 declVariaveis: VARS Declaracao . ';'
    3 Declaracao: Declaracao . ';' umaDeclaracao

    ';'  shift, and go to state 11


state 6

    4 Declaracao: umaDeclaracao .

    $default  reduce using rule 4 (Declaracao)


state 7

    5 umaDeclaracao: Type . VarList

    id  shift, and go to state 12

    VarList  go to state 13
    Elem     go to state 14


state 8

    0 $accept: Programa $end .

    $default  accept


state 9

   12 atribuicao: ATRIBUICAO . conjAtribuicoes ';'

    id  shift, and go to state 15

    conjAtribuicoes  go to state 16
    umaAtribuica     go to state 17


state 10

    1 Programa: declVariaveis atribuicao . Corpo

    INICIO  shift, and go to state 18

    Corpo  go to state 19


state 11

    2 declVariaveis: VARS Declaracao ';' .
    3 Declaracao: Declaracao ';' . umaDeclaracao

    INT  shift, and go to state 4

    $default  reduce using rule 2 (declVariaveis)

    umaDeclaracao  go to state 20
    Type           go to state 7


state 12

    9 Elem: id .
   10     | id . '[' num ']'
   11     | id . '[' num ']' '[' num ']'

    '['  shift, and go to state 21

    $default  reduce using rule 9 (Elem)


state 13

    5 umaDeclaracao: Type VarList .
    7 VarList: VarList . ',' Elem

    ','  shift, and go to state 22

    $default  reduce using rule 5 (umaDeclaracao)


state 14

    8 VarList: Elem .

    $default  reduce using rule 8 (VarList)


state 15

   15 umaAtribuica: id . '=' num

    '='  shift, and go to state 23


state 16

   12 atribuicao: ATRIBUICAO conjAtribuicoes . ';'
   13 conjAtribuicoes: conjAtribuicoes . ',' umaAtribuica

    ';'  shift, and go to state 24
    ','  shift, and go to state 25


state 17

   14 conjAtribuicoes: umaAtribuica .

    $default  reduce using rule 14 (conjAtribuicoes)


state 18

   16 Corpo: INICIO . Instrucoes FIM

    id        shift, and go to state 26
    IMPRIME   shift, and go to state 27
    LER       shift, and go to state 28
    SENAO     shift, and go to state 29
    ENQUANTO  shift, and go to state 30
    SE        shift, and go to state 31
    OU        shift, and go to state 32

    Instrucoes   go to state 33
    Instrucao    go to state 34
    Ciclo        go to state 35
    Condicional  go to state 36
    Assignment   go to state 37
    IO           go to state 38
    Output       go to state 39
    Input        go to state 40


state 19

    1 Programa: declVariaveis atribuicao Corpo .

    $default  reduce using rule 1 (Programa)


state 20

    3 Declaracao: Declaracao ';' umaDeclaracao .

    $default  reduce using rule 3 (Declaracao)


state 21

   10 Elem: id '[' . num ']'
   11     | id '[' . num ']' '[' num ']'

    num  shift, and go to state 41


state 22

    7 VarList: VarList ',' . Elem

    id  shift, and go to state 12

    Elem  go to state 42


state 23

   15 umaAtribuica: id '=' . num

    num  shift, and go to state 43


state 24

   12 atribuicao: ATRIBUICAO conjAtribuicoes ';' .

    $default  reduce using rule 12 (atribuicao)


state 25

   13 conjAtribuicoes: conjAtribuicoes ',' . umaAtribuica

    id  shift, and go to state 15

    umaAtribuica  go to state 44


state 26

   34 Assignment: id . '=' Expressao
   35           | id . '[' Expressao ']' '=' Expressao
   36           | id . '[' Expressao ']' '[' Expressao ']' '=' Expressao

    '['  shift, and go to state 45
    '='  shift, and go to state 46


state 27

   39 Output: IMPRIME . Expressao
   40       | IMPRIME . string

    id      shift, and go to state 47
    string  shift, and go to state 48
    num     shift, and go to state 49
    NOT     shift, and go to state 50
    '('     shift, and go to state 51

    Expressao  go to state 52
    Aritm      go to state 53
    Simples    go to state 54


state 28

   41 Input: LER . id
   42      | LER . id '[' Expressao ']'
   43      | LER . id '[' Expressao ']' '[' Expressao ']'

    id  shift, and go to state 55


state 29

   33 Condicional: SENAO . '{' Instrucoes '}'

    '{'  shift, and go to state 56


state 30

   23 Ciclo: ENQUANTO . '(' Logico ')' '{' Instrucoes '}'

    '('  shift, and go to state 57


state 31

   31 Condicional: SE . '(' Logico ')' '{' Instrucoes '}'

    '('  shift, and go to state 58


state 32

   32 Condicional: OU . '(' Logico ')' '{' Instrucoes '}'

    '('  shift, and go to state 59


state 33

   16 Corpo: INICIO Instrucoes . FIM
   17 Instrucoes: Instrucoes . Instrucao

    id        shift, and go to state 26
    IMPRIME   shift, and go to state 27
    LER       shift, and go to state 28
    FIM       shift, and go to state 60
    SENAO     shift, and go to state 29
    ENQUANTO  shift, and go to state 30
    SE        shift, and go to state 31
    OU        shift, and go to state 32

    Instrucao    go to state 61
    Ciclo        go to state 35
    Condicional  go to state 36
    Assignment   go to state 37
    IO           go to state 38
    Output       go to state 39
    Input        go to state 40


state 34

   18 Instrucoes: Instrucao .

    $default  reduce using rule 18 (Instrucoes)


state 35

   19 Instrucao: Ciclo .

    $default  reduce using rule 19 (Instrucao)


state 36

   20 Instrucao: Condicional .

    $default  reduce using rule 20 (Instrucao)


state 37

   21 Instrucao: Assignment .

    $default  reduce using rule 21 (Instrucao)


state 38

   22 Instrucao: IO . ';'

    ';'  shift, and go to state 62


state 39

   37 IO: Output .

    $default  reduce using rule 37 (IO)


state 40

   38 IO: Input .

    $default  reduce using rule 38 (IO)


state 41

   10 Elem: id '[' num . ']'
   11     | id '[' num . ']' '[' num ']'

    ']'  shift, and go to state 63


state 42

    7 VarList: VarList ',' Elem .

    $default  reduce using rule 7 (VarList)


state 43

   15 umaAtribuica: id '=' num .

    $default  reduce using rule 15 (umaAtribuica)


state 44

   13 conjAtribuicoes: conjAtribuicoes ',' umaAtribuica .

    $default  reduce using rule 13 (conjAtribuicoes)


state 45

   35 Assignment: id '[' . Expressao ']' '=' Expressao
   36           | id '[' . Expressao ']' '[' Expressao ']' '=' Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 64
    Aritm      go to state 53
    Simples    go to state 54


state 46

   34 Assignment: id '=' . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 65
    Aritm      go to state 53
    Simples    go to state 54


state 47

   53 Simples: id .
   54        | id . '[' Expressao ']'
   55        | id . '[' Expressao ']' '[' Expressao ']'

    '['  shift, and go to state 66

    $default  reduce using rule 53 (Simples)


state 48

   40 Output: IMPRIME string .

    $default  reduce using rule 40 (Output)


state 49

   56 Simples: num .

    $default  reduce using rule 56 (Simples)


state 50

   58 Simples: NOT . Logico

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Logico     go to state 67
    Expressao  go to state 68
    Aritm      go to state 53
    Simples    go to state 54


state 51

   57 Simples: '(' . Logico ')'

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Logico     go to state 69
    Expressao  go to state 68
    Aritm      go to state 53
    Simples    go to state 54


state 52

   39 Output: IMPRIME Expressao .
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    OU   shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 39 (Output)


state 53

   47 Expressao: Aritm .
   48 Aritm: Aritm . '*' Simples
   49      | Aritm . '/' Simples
   50      | Aritm . MOD Simples
   51      | Aritm . E Simples

    MOD  shift, and go to state 73
    E    shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    MOD       [reduce using rule 47 (Expressao)]
    E         [reduce using rule 47 (Expressao)]
    '*'       [reduce using rule 47 (Expressao)]
    '/'       [reduce using rule 47 (Expressao)]
    $default  reduce using rule 47 (Expressao)


state 54

   52 Aritm: Simples .

    $default  reduce using rule 52 (Aritm)


state 55

   41 Input: LER id .
   42      | LER id . '[' Expressao ']'
   43      | LER id . '[' Expressao ']' '[' Expressao ']'

    '['  shift, and go to state 77

    $default  reduce using rule 41 (Input)


state 56

   33 Condicional: SENAO '{' . Instrucoes '}'

    id        shift, and go to state 26
    IMPRIME   shift, and go to state 27
    LER       shift, and go to state 28
    SENAO     shift, and go to state 29
    ENQUANTO  shift, and go to state 30
    SE        shift, and go to state 31
    OU        shift, and go to state 32

    Instrucoes   go to state 78
    Instrucao    go to state 34
    Ciclo        go to state 35
    Condicional  go to state 36
    Assignment   go to state 37
    IO           go to state 38
    Output       go to state 39
    Input        go to state 40


state 57

   23 Ciclo: ENQUANTO '(' . Logico ')' '{' Instrucoes '}'

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Logico     go to state 79
    Expressao  go to state 68
    Aritm      go to state 53
    Simples    go to state 54


state 58

   31 Condicional: SE '(' . Logico ')' '{' Instrucoes '}'

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Logico     go to state 80
    Expressao  go to state 68
    Aritm      go to state 53
    Simples    go to state 54


state 59

   32 Condicional: OU '(' . Logico ')' '{' Instrucoes '}'

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Logico     go to state 81
    Expressao  go to state 68
    Aritm      go to state 53
    Simples    go to state 54


state 60

   16 Corpo: INICIO Instrucoes FIM .

    $default  reduce using rule 16 (Corpo)


state 61

   17 Instrucoes: Instrucoes Instrucao .

    $default  reduce using rule 17 (Instrucoes)


state 62

   22 Instrucao: IO ';' .

    $default  reduce using rule 22 (Instrucao)


state 63

   10 Elem: id '[' num ']' .
   11     | id '[' num ']' . '[' num ']'

    '['  shift, and go to state 82

    $default  reduce using rule 10 (Elem)


state 64

   35 Assignment: id '[' Expressao . ']' '=' Expressao
   36           | id '[' Expressao . ']' '[' Expressao ']' '=' Expressao
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    OU   shift, and go to state 70
    ']'  shift, and go to state 83
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72


state 65

   34 Assignment: id '=' Expressao .
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    OU   shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    OU        [reduce using rule 34 (Assignment)]
    $default  reduce using rule 34 (Assignment)


state 66

   54 Simples: id '[' . Expressao ']'
   55        | id '[' . Expressao ']' '[' Expressao ']'

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 84
    Aritm      go to state 53
    Simples    go to state 54


state 67

   58 Simples: NOT Logico .

    $default  reduce using rule 58 (Simples)


state 68

   24 Logico: Expressao . DIF Expressao
   25       | Expressao . IGUAL Expressao
   26       | Expressao . MAIOROUIGUAL Expressao
   27       | Expressao . MENOROUIGUAL Expressao
   28       | Expressao . '<' Expressao
   29       | Expressao . '>' Expressao
   30       | Expressao .
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    DIF           shift, and go to state 85
    MAIOROUIGUAL  shift, and go to state 86
    MENOROUIGUAL  shift, and go to state 87
    IGUAL         shift, and go to state 88
    OU            shift, and go to state 70
    '<'           shift, and go to state 89
    '>'           shift, and go to state 90
    '+'           shift, and go to state 71
    '-'           shift, and go to state 72

    DIF           [reduce using rule 30 (Logico)]
    MAIOROUIGUAL  [reduce using rule 30 (Logico)]
    MENOROUIGUAL  [reduce using rule 30 (Logico)]
    IGUAL         [reduce using rule 30 (Logico)]
    OU            [reduce using rule 30 (Logico)]
    '<'           [reduce using rule 30 (Logico)]
    '>'           [reduce using rule 30 (Logico)]
    '+'           [reduce using rule 30 (Logico)]
    '-'           [reduce using rule 30 (Logico)]
    $default      reduce using rule 30 (Logico)


state 69

   57 Simples: '(' Logico . ')'

    ')'  shift, and go to state 91


state 70

   46 Expressao: Expressao OU . Aritm

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Aritm    go to state 92
    Simples  go to state 54


state 71

   44 Expressao: Expressao '+' . Aritm

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Aritm    go to state 93
    Simples  go to state 54


state 72

   45 Expressao: Expressao '-' . Aritm

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Aritm    go to state 94
    Simples  go to state 54


state 73

   50 Aritm: Aritm MOD . Simples

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Simples  go to state 95


state 74

   51 Aritm: Aritm E . Simples

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Simples  go to state 96


state 75

   48 Aritm: Aritm '*' . Simples

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Simples  go to state 97


state 76

   49 Aritm: Aritm '/' . Simples

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Simples  go to state 98


state 77

   42 Input: LER id '[' . Expressao ']'
   43      | LER id '[' . Expressao ']' '[' Expressao ']'

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 99
    Aritm      go to state 53
    Simples    go to state 54


state 78

   17 Instrucoes: Instrucoes . Instrucao
   33 Condicional: SENAO '{' Instrucoes . '}'

    id        shift, and go to state 26
    IMPRIME   shift, and go to state 27
    LER       shift, and go to state 28
    SENAO     shift, and go to state 29
    ENQUANTO  shift, and go to state 30
    SE        shift, and go to state 31
    OU        shift, and go to state 32
    '}'       shift, and go to state 100

    Instrucao    go to state 61
    Ciclo        go to state 35
    Condicional  go to state 36
    Assignment   go to state 37
    IO           go to state 38
    Output       go to state 39
    Input        go to state 40


state 79

   23 Ciclo: ENQUANTO '(' Logico . ')' '{' Instrucoes '}'

    ')'  shift, and go to state 101


state 80

   31 Condicional: SE '(' Logico . ')' '{' Instrucoes '}'

    ')'  shift, and go to state 102


state 81

   32 Condicional: OU '(' Logico . ')' '{' Instrucoes '}'

    ')'  shift, and go to state 103


state 82

   11 Elem: id '[' num ']' '[' . num ']'

    num  shift, and go to state 104


state 83

   35 Assignment: id '[' Expressao ']' . '=' Expressao
   36           | id '[' Expressao ']' . '[' Expressao ']' '=' Expressao

    '['  shift, and go to state 105
    '='  shift, and go to state 106


state 84

   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm
   54 Simples: id '[' Expressao . ']'
   55        | id '[' Expressao . ']' '[' Expressao ']'

    OU   shift, and go to state 70
    ']'  shift, and go to state 107
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72


state 85

   24 Logico: Expressao DIF . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 108
    Aritm      go to state 53
    Simples    go to state 54


state 86

   26 Logico: Expressao MAIOROUIGUAL . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 109
    Aritm      go to state 53
    Simples    go to state 54


state 87

   27 Logico: Expressao MENOROUIGUAL . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 110
    Aritm      go to state 53
    Simples    go to state 54


state 88

   25 Logico: Expressao IGUAL . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 111
    Aritm      go to state 53
    Simples    go to state 54


state 89

   28 Logico: Expressao '<' . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 112
    Aritm      go to state 53
    Simples    go to state 54


state 90

   29 Logico: Expressao '>' . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 113
    Aritm      go to state 53
    Simples    go to state 54


state 91

   57 Simples: '(' Logico ')' .

    $default  reduce using rule 57 (Simples)


state 92

   46 Expressao: Expressao OU Aritm .
   48 Aritm: Aritm . '*' Simples
   49      | Aritm . '/' Simples
   50      | Aritm . MOD Simples
   51      | Aritm . E Simples

    MOD  shift, and go to state 73
    E    shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    MOD       [reduce using rule 46 (Expressao)]
    E         [reduce using rule 46 (Expressao)]
    '*'       [reduce using rule 46 (Expressao)]
    '/'       [reduce using rule 46 (Expressao)]
    $default  reduce using rule 46 (Expressao)


state 93

   44 Expressao: Expressao '+' Aritm .
   48 Aritm: Aritm . '*' Simples
   49      | Aritm . '/' Simples
   50      | Aritm . MOD Simples
   51      | Aritm . E Simples

    MOD  shift, and go to state 73
    E    shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    MOD       [reduce using rule 44 (Expressao)]
    E         [reduce using rule 44 (Expressao)]
    '*'       [reduce using rule 44 (Expressao)]
    '/'       [reduce using rule 44 (Expressao)]
    $default  reduce using rule 44 (Expressao)


state 94

   45 Expressao: Expressao '-' Aritm .
   48 Aritm: Aritm . '*' Simples
   49      | Aritm . '/' Simples
   50      | Aritm . MOD Simples
   51      | Aritm . E Simples

    MOD  shift, and go to state 73
    E    shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    MOD       [reduce using rule 45 (Expressao)]
    E         [reduce using rule 45 (Expressao)]
    '*'       [reduce using rule 45 (Expressao)]
    '/'       [reduce using rule 45 (Expressao)]
    $default  reduce using rule 45 (Expressao)


state 95

   50 Aritm: Aritm MOD Simples .

    $default  reduce using rule 50 (Aritm)


state 96

   51 Aritm: Aritm E Simples .

    $default  reduce using rule 51 (Aritm)


state 97

   48 Aritm: Aritm '*' Simples .

    $default  reduce using rule 48 (Aritm)


state 98

   49 Aritm: Aritm '/' Simples .

    $default  reduce using rule 49 (Aritm)


state 99

   42 Input: LER id '[' Expressao . ']'
   43      | LER id '[' Expressao . ']' '[' Expressao ']'
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    OU   shift, and go to state 70
    ']'  shift, and go to state 114
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72


state 100

   33 Condicional: SENAO '{' Instrucoes '}' .

    $default  reduce using rule 33 (Condicional)


state 101

   23 Ciclo: ENQUANTO '(' Logico ')' . '{' Instrucoes '}'

    '{'  shift, and go to state 115


state 102

   31 Condicional: SE '(' Logico ')' . '{' Instrucoes '}'

    '{'  shift, and go to state 116


state 103

   32 Condicional: OU '(' Logico ')' . '{' Instrucoes '}'

    '{'  shift, and go to state 117


state 104

   11 Elem: id '[' num ']' '[' num . ']'

    ']'  shift, and go to state 118


state 105

   36 Assignment: id '[' Expressao ']' '[' . Expressao ']' '=' Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 119
    Aritm      go to state 53
    Simples    go to state 54


state 106

   35 Assignment: id '[' Expressao ']' '=' . Expressao

    id   shift, and go to state 47
    num  shift, and go to state 49
    NOT  shift, and go to state 50
    '('  shift, and go to state 51

    Expressao  go to state 120
    Aritm      go to state 53
    Simples    go to state 54


state 107

   54 Simples: id '[' Expressao ']' .
   55        | id '[' Expressao ']' . '[' Expressao ']'

    '['  shift, and go to state 121

    $default  reduce using rule 54 (Simples)


state 108

   24 Logico: Expressao DIF Expressao .
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    OU   shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    OU        [reduce using rule 24 (Logico)]
    '+'       [reduce using rule 24 (Logico)]
    '-'       [reduce using rule 24 (Logico)]
    $default  reduce using rule 24 (Logico)


state 109

   26 Logico: Expressao MAIOROUIGUAL Expressao .
   44 Expressao: Expressao . '+' Aritm
   45          | Expressao . '-' Aritm
   46          | Expressao . OU Aritm

    OU   shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
